// Copyright (C) 2023 Felix Huettner
//
// This file is part of DTRD.
//
// DTRD is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// DTRD is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

package dtn_admin;

message Node {
  string url = 1;
  string status = 2;
  string endpoint = 3;
  bool temporary = 4;
}

message ListNodesRequest {}
message ListNodesResponse { repeated Node nodes = 1; }

message AddNodeRequest { string url = 1; }
message AddNodeResponse {}

message RemoveNodeRequest { string url = 1; }
message RemoveNodeResponse {}

message Route {
  string target = 1;
  string next_hop = 2;
}

message RouteStatus {
  Route route = 1;

  enum RouteType {
    CONNECTED = 0;
    STATIC = 1;
  }
  RouteType type = 2;

  bool preferred = 3;
  bool available = 4;

  uint64 max_bundle_size = 5;
}

message ListRoutesRequest {}
message ListRoutesResponse { repeated RouteStatus routes = 1; }

message AddRouteRequest { Route route = 1; }
message AddRouteResponse {}

message RemoveRouteRequest { Route route = 1; }
message RemoveRouteResponse {}

service AdminService {
  rpc ListNodes(ListNodesRequest) returns (ListNodesResponse);
  rpc AddNode(AddNodeRequest) returns (AddNodeResponse);
  rpc RemoveNode(RemoveNodeRequest) returns (RemoveNodeResponse);
  rpc ListRoutes(ListRoutesRequest) returns (ListRoutesResponse);
  rpc AddRoute(AddRouteRequest) returns (AddRouteResponse);
  rpc RemoveRoute(RemoveRouteRequest) returns (RemoveRouteResponse);
}